Remove whitespace around anc targets. Issue: #2836

--- a/static/css/analytics-widgets.less
+++ b/static/css/analytics-widgets.less
@@ -1,9 +1,5 @@
 @import "variables";
 
-.analytics .inner .row {
-  margin: 0;
-}
-
 .analytics-widget {
   padding: 0.5em;
   &.count-only .widget-body {
@@ -105,10 +101,6 @@
     color: @label-color;
     color: rgba(0, 0, 0, 0.5);
   }
-}
-
-.anc {
-  padding: 0.5em;
 }
 
 .active-pregnancies .title {
